--- a/Project.Blog.Web/Views/Profile/Index.cshtml
+++ b/Project.Blog.Web/Views/Profile/Index.cshtml
@@ -36,10 +36,11 @@
                         @sharing.SharingDate.ToString("dddd, MMMM dd yyyy", new System.Globalization.CultureInfo("en-US"))
                     </div>
                     <div>
-                        @sharing.NumberOfComment Comments
+                        @sharing.numberOfComments Comments
                     </div>
                     <div>
-                        @sharing.NumberOfLike Like
+                        @sharing.numberOfLikes Like
+                        
                     </div>
                 </div>
 
