--- a/Project.Blog.Web/Views/Share/Index.cshtml
+++ b/Project.Blog.Web/Views/Share/Index.cshtml
@@ -23,7 +23,7 @@
                             <option value="2">Movie</option>
                             <option value="3">Music</option>
                             <option value="4">Travel</option>
-                          
+
                         </select>
                     </div>
                     <div class="form-group">
@@ -31,7 +31,9 @@
                         <span asp-validation-for="@Model.Description" class="text-danger"></span>
 
                     </div>
-                    <input type="submit" class="btn btn-primary" value="Send">
+                    <div style="text-align:center">
+                        <input style="padding-right:20px;padding-left:20px;padding-top:5px;padding-bottom:5px;font-weight:600;font-size:15px" type="submit" class="btn btn-primary" value="SEND">
+                    </div>
                 </form>
             </div>
         </div>
