--- a/Project.Blog.Web/Views/Profile/Detail.cshtml
+++ b/Project.Blog.Web/Views/Profile/Detail.cshtml
@@ -140,7 +140,10 @@
                     <div>
                         <input name="sharingId" type="hidden" value="@Model.Id" />
                     </div>
-                    <input type="submit" class="btn btn-primary" value="Send">
+                    <div style="display:flex;justify-content: flex-end;">
+                        <input type="submit" class="btn btn-primary" value="Send">
+                    </div>
+                    
                 </form>
             </div>
         </div>
