--- a/Project.Blog.Web/Views/Profile/Index.cshtml
+++ b/Project.Blog.Web/Views/Profile/Index.cshtml
@@ -29,19 +29,21 @@
                 <div class="card-body">
                     <h2 class="card-title">@sharing.Title</h2>
                     <p class="card-text">@displayShortDescription(@sharing.Description)</p>
-                    <a  asp-action="Detail" asp-route-id="@sharing.Id" class="btn btn-primary">Show Details</a>
-                </div>
-                <div class="card-footer text-muted container">
-                    <div class="d-inline-block ">
-                        @sharing.SharingDate.ToString("dddd, MMMM dd yyyy", new System.Globalization.CultureInfo("en-US"))
+                        <div style="display:flex;justify-content: flex-end;">
+                            <a asp-action="Detail" asp-route-id="@sharing.Id" class="btn btn-primary">Show Details</a>
+                        </div>
                     </div>
-                    <div class="d-inline-block float-right">
-                        @sharing.NumberOfComments Comments
-                    </div>
-                    
-                </div>
+                    <div class="card-footer text-muted container">
+                        <div class="d-inline-block ">
+                            @sharing.SharingDate.ToString("dddd, MMMM dd yyyy", new System.Globalization.CultureInfo("en-US"))
+                        </div>
+                        <div class="d-inline-block float-right">
+                            @sharing.NumberOfComments Comments
+                        </div>
 
-            </div>
+                    </div>
+
+                </div>
         }
 
         
