--- a/Project.Blog.Web/Views/Profile/Index.cshtml
+++ b/Project.Blog.Web/Views/Profile/Index.cshtml
@@ -23,11 +23,18 @@
 }
 
     <div class="my-4">
-        <div class="mr-4 mb-2" style="display:flex;justify-content: flex-end;">
+        @{
+            if (@ViewBag.Current)
+            {
+                <div class="mr-4 mb-2" style="display:flex;justify-content: flex-end;">
 
-            <a style="font-size:16px;font-weight:500" asp-controller="Profile" asp-action="Setting">Setting</a>
+                    <a style="font-size:16px;font-weight:500" asp-controller="Profile" asp-action="Setting">Setting</a>
 
-        </div>
+                </div>
+            }
+           
+        }
+        
         <div class="col">
             @foreach (var sharing in Model)
             {
@@ -36,7 +43,15 @@
                         <h2 class="card-title">@sharing.Title</h2>
                         <p class="card-text">@displayShortDescription(@sharing.Description)</p>
                         <div style="display:flex;justify-content: flex-end;">
-                            <a asp-action="Detail" asp-route-id="@sharing.Id" class="btn btn-primary">Show Details</a>
+                            <a asp-action="Detail" asp-route-id="@sharing.Id" class="btn btn-primary mr-1">Show Details</a>
+                            @{
+                                if (@ViewBag.Current)
+                                {
+                                    <a asp-action="DeleteSharing" asp-route-id="@sharing.Id" asp-route-user="@sharing.UserId" class="btn btn-primary ml-2">Delete</a>
+
+                                }
+
+                            }
                         </div>
                     </div>
                     <div class="card-footer text-muted container">
