--- a/Project.Blog.Web/Views/Home/Register.cshtml
+++ b/Project.Blog.Web/Views/Home/Register.cshtml
@@ -19,11 +19,11 @@
 
                     <div class="form-group">
                         <label asp-for="@Model.Password" style="font-weight:bold"></label>
-                        <input asp-for="@Model.Password" />
+                        <input asp-for="@Model.Password"type="password" />
                     </div>
                     <div class="form-group">
                         <label asp-for="@Model.ConfirmPassword" style="font-weight:bold"></label>
-                        <input asp-for="@Model.ConfirmPassword" />
+                        <input asp-for="@Model.ConfirmPassword" type="password" />
                     </div>
 
                     <div class="form-group">
