--- a/Project.Blog.Web/Views/Profile/Index.cshtml
+++ b/Project.Blog.Web/Views/Profile/Index.cshtml
@@ -58,7 +58,7 @@
                         <div class="d-inline-block ">
                             @sharing.SharingDate.ToString("dddd, MMMM dd yyyy", new System.Globalization.CultureInfo("en-US"))
                         </div>
-                        <div class="d-inline-block float-right">
+                        <div class="d-inline-block float-right" style="color:brown">
                             @sharing.NumberOfComments Comments
                         </div>
 
