--- a/Project.Blog.Web/Views/Home/Index.cshtml
+++ b/Project.Blog.Web/Views/Home/Index.cshtml
@@ -37,11 +37,9 @@
 
         <ul class="pagination justify-content-center mb-4">
             <li class="page-item">
-                <a class="page-link" href="#">&larr; Older</a>
+                <a class="page-link pr-4 pl-4 pt-0 pb-0" href="#">&uarr;</a>
             </li>
-            <li class="page-item disabled">
-                <a class="page-link" href="#">Newer &rarr;</a>
-            </li>
+            
         </ul>
     </div>
 
