--- a/Project.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Project.Blog.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <link href="~/css/blog-home.css" rel="stylesheet">
 
 
-
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -26,7 +26,7 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark  fixed-top" style="background-color:#0069D9">
         <div class="container">
             <a asp-controller="Home" asp-action="Index" class="navbar-brand">Sample Blog</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,15 +41,15 @@
                         </a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" asp-controller="Share" asp-action="Index">Share</a>
                     </li>
                     @if (SignInManager.IsSignedIn(User)) {
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" asp-controller="Profile" asp-action="Index" >Profile</a>
 </li>
                     }
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         @if (SignInManager.IsSignedIn(User))
                         {
                             <a class="nav-link" asp-controller="Home" asp-action="Logout">Logout</a>
